@@ -1,4 +1,9 @@
-2008-11-6  Yu-Sung Su <ys463@columbia.edu>  
+2009-2-10  Yu-Sung Su <ys463@columbia.edu>  
+    * DESCRIPTION (Version, Date): 0.01-15.
+    * R/jags: inits=NULL, let jags gen inits
+
+
+2009-1-28  Yu-Sung Su <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 0.01-14.
     * R/traceplot: add traceplot generic and rjags method
     * R/jags: fix the bug when n.burnin=0
